--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loginapp",
-  "homepage": "https://github.com/kurrushdrak/loginapp.git",
+  "homepage": "https://github.com/kurrushdrak/applogin.git",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,7 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
